--- a/ExampleOOP/ExampleWebApp/Components/Routes.razor
+++ b/ExampleOOP/ExampleWebApp/Components/Routes.razor
@@ -1,6 +1,4 @@
-﻿
-
-<Router AppAssembly="typeof(Program).Assembly">
+﻿<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
