--- a/ExampleOOP/ExampleWebApp/Components/Layout/NavMenu.razor
+++ b/ExampleOOP/ExampleWebApp/Components/Layout/NavMenu.razor
@@ -3,4 +3,8 @@
     <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix">Counter</MudNavLink>
     <MudNavLink Href="/weather" Match="NavLinkMatch.Prefix">Weather</MudNavLink>
     <MudNavLink Href="/addperson" Match="NavLinkMatch.Prefix">Add Person</MudNavLink>
+    <MudNavLink Href="/form-boot" Match="NavLinkMatch.Prefix">Add Person Bootstrap</MudNavLink>
+    <MudNavLink Href="/personreport" Match="NavLinkMatch.Prefix">Person Report</MudNavLink>
+    
+    
 </MudNavMenu>
