Finished Database Connection, Added ProductServices, Added Favicon and MudTheme (with dark mode)

--- a/ExampleOOP/WestWindWebApp/Components/Layout/NavMenu.razor
+++ b/ExampleOOP/WestWindWebApp/Components/Layout/NavMenu.razor
@@ -1,5 +1,4 @@
 ﻿﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All">Home</MudNavLink>
-@*     <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix">Counter</MudNavLink>
-    <MudNavLink Href="/weather" Match="NavLinkMatch.Prefix">Weather</MudNavLink> *@
+    <MudNavLink Href="/products" Match="NavLinkMatch.Prefix">Products</MudNavLink>
 </MudNavMenu>
