--- a/ExampleOOP/WestWindWebApp/Components/Pages/Home.razor
+++ b/ExampleOOP/WestWindWebApp/Components/Pages/Home.razor
@@ -2,6 +2,11 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<MudGrid Class="align-center" Justify="Justify.Center">
+    <MudItem xs="12" sm="6">
+        <MudImage Alt="Kitten and Explosion" Src="./images/kitten.webp" Fluid="true" />
+    </MudItem>
+    <MudItem xs="12" sm="6">
+        <MudText Typo="Typo.h4" Color="Color.Secondary">Database and CRUD Example App!</MudText>
+    </MudItem>
+</MudGrid>
