--- a/ExampleOOP/WestWindWebApp/Components/_Imports.razor
+++ b/ExampleOOP/WestWindWebApp/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using WestWindWebApp
 @using WestWindWebApp.Components
 @using MudBlazor
+@using WestWindLibrary.Entities
+@using WestWindLibrary.BLL
