--- a/ExampleOOP/ExampleWebApp/Components/Pages/PersonCollection.razor
+++ b/ExampleOOP/ExampleWebApp/Components/Pages/PersonCollection.razor
@@ -1,5 +1,9 @@
 ﻿@page "/addperson"
 
+<PageTitle>Add Person</PageTitle>
+@inject IJSRuntime JSRunTime
+@inject IDialogService DialogService
+
 <MudText Typo="Typo.h3">Add Person</MudText>
 
 <MudText Typo="Typo.body1">Use this form to add a person.</MudText>
@@ -167,18 +171,37 @@
         }
     }
 
-    private void ClearForm()
+    //Using JSRunTime service
+    //We need to make the method async
+    // private async Task ClearForm()
+    // {
+
+    //     //WARNING: remember to inject IJSRuntime at the top of the page! (after the @page and PageTitle)
+
+    //     //issue a prompt dialogue to the user to obtain their confirmation of the action!
+    //     //Create the message in a generic object array
+    //     object[] confirmationMessage = new object[] { "Clearing will lose any unsaved data. Are you sure you want to clear the form?" };
+
+    //     if(await JSRunTime.InvokeAsync<bool>("confirm", confirmationMessage))
+    //     {
+    //         await form.ResetAsync();
+    //         errorMessages.Clear();
+    //         successMessage = string.Empty;
+    //     }
+    // }
+
+    //MudBlazor Method using DialogService
+    private async void ClearForm()
     {
-        form.ResetAsync();
-        // firstName = "";
-        // lastName = "";
-        // streetNumber = 0;
-        // streetName = "";
-        // city = "";
-        // province = "";
-        // postalCode = "";
-        errorMessages.Clear();
-        successMessage = string.Empty;
+        bool? result = await DialogService.ShowMessageBox("Confirm Clear", "Clearing will lose any unsaved data. Are you sure you want to clear the form?", yesText: "Clear Form", cancelText: "No don't!", noText: "Really don't Clear!");
+
+        //Yes results = true, No result = false, Cancel result = null
+        if (result != null && result != false)
+        {
+            await form.ResetAsync();
+            errorMessages.Clear();
+            successMessage = string.Empty;
+        }
     }
 
     private Exception GetInnerException(Exception ex)
