--- a/ExampleOOP/WestWindWebApp/Components/App.razor
+++ b/ExampleOOP/WestWindWebApp/Components/App.razor
@@ -7,6 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="WestWindWebApp.styles.css" />
+    <link rel="icon" type="image/png" href="./images/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <HeadOutlet @rendermode="InteractiveServer" />
