Added OrderService and start of Order Page, Add ExtensionsService for DB Access, Added proper code to Web Project Program.cs. Reversed Engineered the DB.

--- a/ExampleWestWindSolution/ExampleWestWind/Components/Layout/MainLayout.razor
+++ b/ExampleWestWindSolution/ExampleWestWind/Components/Layout/MainLayout.razor
@@ -14,7 +14,9 @@
         <NavMenu/>
     </MudDrawer>
     <MudMainContent>
-        @Body
+        <MudContainer MaxWidth="MaxWidth.Large">
+            @Body
+        </MudContainer>
     </MudMainContent>
 </MudLayout>
 
