--- a/ExampleWestWindSolution/ExampleWestWind/Components/Layout/NavMenu.razor
+++ b/ExampleWestWindSolution/ExampleWestWind/Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All">Home</MudNavLink>
-    <MudNavLink Href="/servers" Match="NavLinkMatch.Prefix">Product Crud</MudNavLink>
+    <MudNavLink Href="/orders" Match="NavLinkMatch.Prefix">Order Report</MudNavLink>
 </MudNavMenu>
