Product List Added, Product Services Added.

--- a/ExampleWestWindSolution/ExampleWestWind/Components/Layout/NavMenu.razor
+++ b/ExampleWestWindSolution/ExampleWestWind/Components/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All">Home</MudNavLink>
     <MudNavLink Href="/orders" Match="NavLinkMatch.Prefix">Order Report</MudNavLink>
+    <MudNavLink Href="/products" Match="NavLinkMatch.Prefix">Product Search</MudNavLink>
 </MudNavMenu>
