--- a/ExampleWestWindSolution/ExampleWestWind/Components/Pages/ProductList.razor
+++ b/ExampleWestWindSolution/ExampleWestWind/Components/Pages/ProductList.razor
@@ -43,6 +43,7 @@
 </MudGrid>
 @if (products.Count == 0 && !noProducts)
 {
+    //Test
     <MudText Typo="Typo.h5">Select a category to see the products.</MudText>
 }
 else if (noProducts)
