--- a/ExampleWestWindSolution/ExampleWestWind/Components/Pages/ProductCRUD.razor
+++ b/ExampleWestWindSolution/ExampleWestWind/Components/Pages/ProductCRUD.razor
@@ -98,7 +98,8 @@
     <MudPaper Elevation="0" Class="mt-4 d-flex flex-wrap">
         <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="@(isNew ? AddProduct : UpdateProduct)">@(isNew ? "Add Product" : "Update Product")</MudButton>
         <MudSpacer />
-        <MudButton Variant="Variant.Filled" Color="Color.Error" OnClick="DeleteProduct">Delete Product</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Warning" Class="@(isNew ? "invisible mr-4" : "mr-4")" OnClick="DeactivateProduct">Deactivate Product</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Error" Class="@(isNew ? "invisible" : "")" OnClick="DeleteProduct">Delete Product</MudButton>
     </MudPaper>
 </MudForm>
 <MudText Typo="Typo.h6" Color="Color.Success">@feedback</MudText>
